Update some metadata

--- a/index.html
+++ b/index.html
@@ -4,20 +4,19 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     
-<!-- Mirrored from sitcon.org/2014/ by HTTrack Website Copier/3.x [XR&CO'2013], Tue, 01 Apr 2014 01:03:05 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>學生計算機年會 | Students' Information Technology Conference</title>
+        <title>台大資管迎新宿營 | NTU IM Freshman Camp</title>
         <meta name="description" content="以學生為本、由學生自發舉辦，SITCON 學生計算機年會不只是學生「學以致用、教學相長」的實際展現，更冀望所有對資訊有興趣的學生，能夠在年會裏齊聚一堂，彼此激盪、傳承、啟發。">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <meta property="og:title" content="學生計算機年會">
+        <meta property="og:title" content="台大資管迎新宿營">
         <meta property="og:type" content="website">
         <meta property="og:url" content="index.html">
         <meta property="og:image" content="icon-2014-special.jpg">
-        <meta property="og:site_name" content="學生計算機年會">
+        <meta property="og:site_name" content="台大資管迎新宿營">
         <meta property="og:description" content="以學生為本、由學生自發舉辦，SITCON 學生計算機年會不只是學生「學以致用、教學相長」的實際展現，更冀望所有對資訊有興趣的學生，能夠在年會裏齊聚一堂，彼此激盪、傳承、啟發。">
 
         <meta property="twitter:title" content="學生計算機年會">
