Modify some info
Remove some unnecessary code

--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    
-<meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -44,8 +42,8 @@
   <div class="inner">
     <div id="logo">Students' Information Technology Conference</div>
     <h1>
-      學生計算機年會
-      <span class="small sub-header as-block">Students' Information Technology Conference</span>
+      台大資管迎新宿營
+      <span class="small sub-header as-block">Freshman Camp for IM Department, National Taiwan University</span>
       <span class="sub-header as-block">學生與創新實作</span>
     </h1>
     <a class="glowing button" href="http://goo.gl/V3jzlh" target="_blank">會後意見調查表</a>
@@ -2335,12 +2333,12 @@ MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
         <footer id="footer">
           <div id="copyright">
             <div class="container">
-              &copy; 2014 Students’ Information Technology Conference
+              &copy; 2014 Department of Information Management, National Taiwan University
             </div>
           </div>
           <div id="hyperlink">
             <div class="container">
-              <a class="small glowing button" href="https://www.facebook.com/SitconTW" target="_blank">Facebook</a>
+              <a class="small glowing button" href="https://www.facebook.com/NTUIMSA" target="_blank">Facebook</a>
               <a class="small glowing button" href="https://twitter.com/sitcontw" target="_blank">Twitter</a>
               <a class="small glowing button" href="http://www.plurk.com/sitcon" target="_blank">Plurk</a>
               <a class="small glowing button" href="../2013/index.html" target="_blank">SITCON 2013</a>
@@ -2349,7 +2347,7 @@ MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
         </footer>
 
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. 
 <script>
   (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
   function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
@@ -2358,6 +2356,7 @@ MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
   r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
   ga('create','UA-34467841-1');ga('send','pageview');
 </script>
+-->
 
         <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
         <script src="bower_components/sections.js/dist/sectionsjs.min.js"></script>
@@ -2366,5 +2365,4 @@ MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
         <script src="javascripts/main.js"></script>
     </body>
 
-<!-- Mirrored from sitcon.org/2014/ by HTTrack Website Copier/3.x [XR&CO'2013], Tue, 01 Apr 2014 01:03:23 GMT -->
 </html>
