revert to original index.html in order to fix problems

--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+    
+<!-- Mirrored from sitcon.org/2014/ by HTTrack Website Copier/3.x [XR&CO'2013], Tue, 01 Apr 2014 01:03:05 GMT -->
+<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>台大資管迎新宿營 | NTU IM Freshman Camp</title>
+        <title>學生計算機年會 | Students' Information Technology Conference</title>
         <meta name="description" content="以學生為本、由學生自發舉辦，SITCON 學生計算機年會不只是學生「學以致用、教學相長」的實際展現，更冀望所有對資訊有興趣的學生，能夠在年會裏齊聚一堂，彼此激盪、傳承、啟發。">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <meta property="og:title" content="台大資管迎新宿營">
+        <meta property="og:title" content="學生計算機年會">
         <meta property="og:type" content="website">
         <meta property="og:url" content="index.html">
         <meta property="og:image" content="icon-2014-special.jpg">
-        <meta property="og:site_name" content="台大資管迎新宿營">
+        <meta property="og:site_name" content="學生計算機年會">
         <meta property="og:description" content="以學生為本、由學生自發舉辦，SITCON 學生計算機年會不只是學生「學以致用、教學相長」的實際展現，更冀望所有對資訊有興趣的學生，能夠在年會裏齊聚一堂，彼此激盪、傳承、啟發。">
 
         <meta property="twitter:title" content="學生計算機年會">
@@ -42,8 +45,8 @@
   <div class="inner">
     <div id="logo">Students' Information Technology Conference</div>
     <h1>
-      台大資管迎新宿營
-      <span class="small sub-header as-block">Freshman Camp for IM Department, National Taiwan University</span>
+      學生計算機年會
+      <span class="small sub-header as-block">Students' Information Technology Conference</span>
       <span class="sub-header as-block">學生與創新實作</span>
     </h1>
     <a class="glowing button" href="http://goo.gl/V3jzlh" target="_blank">會後意見調查表</a>
@@ -2333,12 +2336,12 @@ MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
         <footer id="footer">
           <div id="copyright">
             <div class="container">
-              &copy; 2014 Department of Information Management, National Taiwan University
+              &copy; 2014 Students’ Information Technology Conference
             </div>
           </div>
           <div id="hyperlink">
             <div class="container">
-              <a class="small glowing button" href="https://www.facebook.com/NTUIMSA" target="_blank">Facebook</a>
+              <a class="small glowing button" href="https://www.facebook.com/SitconTW" target="_blank">Facebook</a>
               <a class="small glowing button" href="https://twitter.com/sitcontw" target="_blank">Twitter</a>
               <a class="small glowing button" href="http://www.plurk.com/sitcon" target="_blank">Plurk</a>
               <a class="small glowing button" href="../2013/index.html" target="_blank">SITCON 2013</a>
@@ -2347,7 +2350,7 @@ MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
         </footer>
 
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. 
+        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 <script>
   (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
   function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
@@ -2356,7 +2359,6 @@ MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
   r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
   ga('create','UA-34467841-1');ga('send','pageview');
 </script>
--->
 
         <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
         <script src="bower_components/sections.js/dist/sectionsjs.min.js"></script>
@@ -2365,4 +2367,5 @@ MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
         <script src="javascripts/main.js"></script>
     </body>
 
+<!-- Mirrored from sitcon.org/2014/ by HTTrack Website Copier/3.x [XR&CO'2013], Tue, 01 Apr 2014 01:03:23 GMT -->
 </html>
